# yamcs-instance

./: .dockerignore  .gitignore  .gitlab-ci.yml  Dockerfile  LICENSE  README.md  automated_ping_TC[17,2].py  backup.sh  convert.py  database.py  docker_readme.md  fileHandler.py  hex_to_bytes.py  mission_database.xlsx  newpackets.raw  output.txt  packets.raw  packets2.raw  pom.xml  python-script.py  simulator.py  simulatorudp.py  start.sh  startup-check.sh  temp.xml  update_database.py
backup-scripts/: backup.sh  readme.md
communication/: COMMSmessageHandler.py  common_module.py  data.py  logging.conf  logs.py  messageHandler.py  requirements.txt  settings.yaml
communication/satnogs-comms-getaway/: CMakeLists.txt  README.md
communication/satnogs-comms-getaway/contrib/: config.yaml
communication/satnogs-comms-getaway/src/: can_transport.cpp  can_transport.hpp  gr_zmq_transport.cpp  gr_zmq_transport.hpp  main.cpp  transport.hpp  udp_transport.cpp  udp_transport.hpp
src/main/resources/source/files/: mediumFile.txt  smallFile.txt  testFile.txt
src/main/yamcs/etc/: processor.yaml  yamcs.ADCS.yaml  yamcs.AcubeSAT.yaml  yamcs.COMMS.yaml  yamcs.OBC.yaml  yamcs.PeakSat.yaml  yamcs.SU.yaml  yamcs.myproject.yaml  yamcs.yaml
src/main/yamcs/mdb/: base.xml  dt.xml  file-handling.xml  pus-not-used.xml  pus-verification.xml  pus.xml  report-values.xml  set-values.xml  time-based-scheduling.xml  xtce.xml
src/main/yamcs/mdb/adcs/: adcs-dt.xml  adcs-xtce.xml
src/main/yamcs/mdb/comms/: comms-dt.xml  comms-xtce.xml
src/main/yamcs/mdb/frames/: frames-dt.xml  frames.xml
src/main/yamcs/mdb/obc/: obc-dt.xml  obc-xtce.xml
(+102 files in other folders)
